README riscritto: fasi del progetto, risultati, installazione, riproducibilità ed EMR
- experiments.sh: maiuscole portabili (bash di macOS) e messaggio finale su results/